Navbar jump fix

--- a/styles/style.css
+++ b/styles/style.css
@@ -20,14 +20,11 @@ img {
 
 html {
   scroll-behavior: smooth;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  overflow-y: scroll;
 }
 
 .stop-scrolling {
-  overflow-y: hidden;
+  height: 100%;
+  overflow: hidden;
 }
 
 @font-face {
@@ -1020,7 +1017,6 @@ header {
   padding: 8rem 3.4vh 0;
   display: block;
   z-index: 50;
-  overflow-y: hidden;
   background-color: rgba(20, 20, 20, 0.98);
 }
 
